fixed horizontal scrolling #27

--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -6,7 +6,6 @@
 
   overflow: hidden;
   box-sizing: content-box;
-  min-width: 270px;
   max-width: 270px;
   background-color: $bg-color-primary;
   border-radius: 4px;
