--- a/src/pages/filter/filter.scss
+++ b/src/pages/filter/filter.scss
@@ -32,7 +32,7 @@
   }
 
   &__form {
-    margin-right: 60px;
+    margin-right: 5%;
     max-width: 266px;
 
     @media screen and (max-width: $phone-width) {
